@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-27T08:19:57Z",
-  "count_outdated" : 381,
-  "uniques_outdated" : 239,
-  "count" : 409,
+  "timestamp" : "2022-07-27T16:22:58Z",
+  "count_outdated" : 383,
+  "uniques_outdated" : 240,
+  "count" : 410,
   "uniques" : 256,
   "clones" : [
-    {
-      "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 2,
